--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,5 +6,10 @@ pipeline{
         sh 'echo "Build from Github"'
       }
     }
+    stage('test'){
+      steps{
+        sh 'echo "Build from Github running on `hostname`"'
+      }
+    }
   }
 }
