--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,7 +8,10 @@ pipeline{
     }
     stage('test'){
       steps{
-        sh 'echo "Build from Github running on `hostname`"'
+        sh '''
+         echo "Build from Github running on `hostname`"
+         bash ${WORKSPACE}/linux/script.sh
+         '''
       }
     }
   }
