--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ on:
              required: true
              default: vishnu
              type: string
-
+env:
+  app_name: "WebApp"
+  app-version: "1.1"
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -32,7 +34,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world! from `hostname`
+        run: |
+          echo Hello, world! from `hostname`
+          echo "The app name is :   {{ env.app_name }}"
+          echo "The app version is : {{ env.app-version }}"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
