--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,9 @@ jobs:
           echo "The app name is :   {{ env.app_name }}"
           echo "The app version is : {{ env.app-version }}"
 
+          PLACE=BANGALORE
+          echo $PLAVE >> $GITHUB_ENV
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
@@ -50,4 +53,6 @@ jobs:
     needs : [ build]
     steps:
       - name: first test
-        run: echo "Hello test"
+        run: |
+          echo "Hello test"
+          echo "The name of place is : {{ env.PLACE }} "
