--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           echo "The app version is : {{ env.app-version }}"
 
           PLACE=BANGALORE
-          echo $PLAVE >> $GITHUB_ENV
+          echo $PLACE >> $GITHUB_ENV
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
